iptables.rules
# Generated by iptables-save v1.8.4 on Thu Mar 17 10:18:05 2022
*nat
:PREROUTING ACCEPT [17:20102]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [24:1032]
:POSTROUTING ACCEPT [17:956]
-A OUTPUT -d 10.192.0.0/10 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
-A OUTPUT -d 127.0.0.1/32 -p udp -m udp --dport 53 -j REDIRECT --to-ports 5353
-A OUTPUT -m owner --uid-owner 101 -j RETURN
-A OUTPUT -o lo -j RETURN
-A OUTPUT -d 127.0.0.0/8 -j RETURN
-A OUTPUT -d 10.0.0.0/8 -j RETURN
-A OUTPUT -d 172.16.0.0/12 -j RETURN
-A OUTPUT -d 192.168.0.0/16 -j RETURN
-A OUTPUT -d 0.0.0.0/8 -j RETURN
-A OUTPUT -d 100.64.0.0/10 -j RETURN
-A OUTPUT -d 169.254.0.0/16 -j RETURN
-A OUTPUT -d 192.0.0.0/24 -j RETURN
-A OUTPUT -d 192.0.2.0/24 -j RETURN
-A OUTPUT -d 192.88.99.0/24 -j RETURN
-A OUTPUT -d 198.18.0.0/15 -j RETURN
-A OUTPUT -d 198.51.100.0/24 -j RETURN
-A OUTPUT -d 203.0.113.0/24 -j RETURN
-A OUTPUT -d 224.0.0.0/4 -j RETURN
-A OUTPUT -d 240.0.0.0/4 -j RETURN
-A OUTPUT -d 255.255.255.255/32 -j RETURN
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
COMMIT
# Completed on Thu Mar 17 10:18:05 2022
